tests/ir/snapshots/integration__ir__hir__snapshot_hir_with_handler.snap
---
source: tests/ir/hir.rs
expression: mir
---
MirProgram {
    functions: [
        MirFunction {
            name: "__handler_my_handler_println",
            params: [
                MirParam {
                    label: "s",
                    name: "s",
                    typ: String,
                },
            ],
            ret_type: Unit,
            body: [
                Return(
                    Literal(
                        Unit,
                    ),
                ),
            ],
            span: 59..157,
            source_file: None,
            source_line: None,
        },
        MirFunction {
            name: "main",
            params: [],
            ret_type: Unit,
            body: [
                Expr(
                    Call {
                        func: "__handler_my_handler_println",
                        args: [
                            (
                                "val",
                                Literal(
                                    String(
                                        "hello",
                                    ),
                                ),
                            ),
                        ],
                        ret_type: Unit,
                    },
                ),
            ],
            span: 162..280,
            source_file: None,
            source_line: None,
        },
    ],
    externals: [],
    enum_defs: [
        EnumDef {
            name: "List",
            is_public: true,
            is_opaque: false,
            type_params: [
                "T",
            ],
            variants: [
                VariantDef {
                    name: "Nil",
                    fields: [],
                },
                VariantDef {
                    name: "Cons",
                    fields: [
                        (
                            Some(
                                "v",
                            ),
                            Var(
                                "T",
                            ),
                        ),
                        (
                            Some(
                                "rest",
                            ),
                            List(
                                Var(
                                    "T",
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Exn",
            is_public: true,
            is_opaque: false,
            type_params: [],
            variants: [
                VariantDef {
                    name: "RuntimeError",
                    fields: [
                        (
                            Some(
                                "val",
                            ),
                            String,
                        ),
                    ],
                },
                VariantDef {
                    name: "InvalidIndex",
                    fields: [
                        (
                            Some(
                                "val",
                            ),
                            I64,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "ByteBuffer",
            is_public: true,
            is_opaque: true,
            type_params: [],
            variants: [
                VariantDef {
                    name: "ByteBuffer",
                    fields: [
                        (
                            Some(
                                "id",
                            ),
                            I64,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Pair",
            is_public: true,
            is_opaque: false,
            type_params: [
                "A",
                "B",
            ],
            variants: [
                VariantDef {
                    name: "Pair",
                    fields: [
                        (
                            Some(
                                "left",
                            ),
                            UserDefined(
                                "A",
                                [],
                            ),
                        ),
                        (
                            Some(
                                "right",
                            ),
                            UserDefined(
                                "B",
                                [],
                            ),
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Partition",
            is_public: true,
            is_opaque: false,
            type_params: [
                "T",
            ],
            variants: [
                VariantDef {
                    name: "Partition",
                    fields: [
                        (
                            Some(
                                "matched",
                            ),
                            List(
                                UserDefined(
                                    "T",
                                    [],
                                ),
                            ),
                        ),
                        (
                            Some(
                                "rest",
                            ),
                            List(
                                UserDefined(
                                    "T",
                                    [],
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Handle",
            is_public: true,
            is_opaque: false,
            type_params: [],
            variants: [
                VariantDef {
                    name: "Handle",
                    fields: [
                        (
                            Some(
                                "id",
                            ),
                            I64,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "HashMap",
            is_public: true,
            is_opaque: true,
            type_params: [],
            variants: [
                VariantDef {
                    name: "HashMap",
                    fields: [
                        (
                            Some(
                                "id",
                            ),
                            I64,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Lookup",
            is_public: true,
            is_opaque: false,
            type_params: [],
            variants: [
                VariantDef {
                    name: "Found",
                    fields: [
                        (
                            Some(
                                "value",
                            ),
                            I64,
                        ),
                    ],
                },
                VariantDef {
                    name: "Missing",
                    fields: [],
                },
            ],
        },
        EnumDef {
            name: "Partition",
            is_public: true,
            is_opaque: false,
            type_params: [
                "T",
            ],
            variants: [
                VariantDef {
                    name: "Partition",
                    fields: [
                        (
                            Some(
                                "matched",
                            ),
                            List(
                                UserDefined(
                                    "T",
                                    [],
                                ),
                            ),
                        ),
                        (
                            Some(
                                "rest",
                            ),
                            List(
                                UserDefined(
                                    "T",
                                    [],
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Header",
            is_public: true,
            is_opaque: false,
            type_params: [],
            variants: [
                VariantDef {
                    name: "Header",
                    fields: [
                        (
                            Some(
                                "name",
                            ),
                            String,
                        ),
                        (
                            Some(
                                "value",
                            ),
                            String,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Response",
            is_public: true,
            is_opaque: false,
            type_params: [],
            variants: [
                VariantDef {
                    name: "Response",
                    fields: [
                        (
                            Some(
                                "status",
                            ),
                            I64,
                        ),
                        (
                            Some(
                                "headers",
                            ),
                            String,
                        ),
                        (
                            Some(
                                "body",
                            ),
                            String,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Server",
            is_public: true,
            is_opaque: true,
            type_params: [],
            variants: [
                VariantDef {
                    name: "Server",
                    fields: [
                        (
                            Some(
                                "id",
                            ),
                            I64,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Request",
            is_public: true,
            is_opaque: false,
            type_params: [],
            variants: [
                VariantDef {
                    name: "Request",
                    fields: [
                        (
                            Some(
                                "method",
                            ),
                            String,
                        ),
                        (
                            Some(
                                "path",
                            ),
                            String,
                        ),
                        (
                            Some(
                                "headers",
                            ),
                            String,
                        ),
                        (
                            Some(
                                "body",
                            ),
                            String,
                        ),
                        (
                            Some(
                                "req_id",
                            ),
                            I64,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Option",
            is_public: true,
            is_opaque: false,
            type_params: [
                "T",
            ],
            variants: [
                VariantDef {
                    name: "Some",
                    fields: [
                        (
                            Some(
                                "val",
                            ),
                            UserDefined(
                                "T",
                                [],
                            ),
                        ),
                    ],
                },
                VariantDef {
                    name: "None",
                    fields: [],
                },
            ],
        },
        EnumDef {
            name: "ExecResult",
            is_public: true,
            is_opaque: false,
            type_params: [],
            variants: [
                VariantDef {
                    name: "ExecResult",
                    fields: [
                        (
                            Some(
                                "exit_code",
                            ),
                            I64,
                        ),
                        (
                            Some(
                                "stdout",
                            ),
                            String,
                        ),
                        (
                            Some(
                                "stderr",
                            ),
                            String,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Result",
            is_public: true,
            is_opaque: false,
            type_params: [
                "T",
                "E",
            ],
            variants: [
                VariantDef {
                    name: "Ok",
                    fields: [
                        (
                            Some(
                                "val",
                            ),
                            UserDefined(
                                "T",
                                [],
                            ),
                        ),
                    ],
                },
                VariantDef {
                    name: "Err",
                    fields: [
                        (
                            Some(
                                "err",
                            ),
                            UserDefined(
                                "E",
                                [],
                            ),
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Set",
            is_public: true,
            is_opaque: true,
            type_params: [],
            variants: [
                VariantDef {
                    name: "Set",
                    fields: [
                        (
                            Some(
                                "id",
                            ),
                            I64,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "StringMap",
            is_public: true,
            is_opaque: true,
            type_params: [],
            variants: [
                VariantDef {
                    name: "StringMap",
                    fields: [
                        (
                            Some(
                                "id",
                            ),
                            I64,
                        ),
                    ],
                },
            ],
        },
        EnumDef {
            name: "Lookup",
            is_public: true,
            is_opaque: false,
            type_params: [],
            variants: [
                VariantDef {
                    name: "Found",
                    fields: [
                        (
                            Some(
                                "value",
                            ),
                            I64,
                        ),
                    ],
                },
                VariantDef {
                    name: "Missing",
                    fields: [],
                },
            ],
        },
        EnumDef {
            name: "Pair",
            is_public: true,
            is_opaque: false,
            type_params: [
                "A",
                "B",
            ],
            variants: [
                VariantDef {
                    name: "Pair",
                    fields: [
                        (
                            Some(
                                "left",
                            ),
                            UserDefined(
                                "A",
                                [],
                            ),
                        ),
                        (
                            Some(
                                "right",
                            ),
                            UserDefined(
                                "B",
                                [],
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
